# little_book_of_programming_challenges

./: .gitignore  Cargo.toml  README.md
c1/: Cargo.toml
c1/src/: main.rs
c10/: Cargo.toml
c11/: Cargo.toml
c2/: Cargo.toml
c2/src/: main.rs
c3/src/: main.rs
c4/src/: main.rs
c5/src/: main.rs
c6/: Cargo.toml
c6/src/: main.rs
c7/src/: main.rs
c8/src/: main.rs
c9/: Cargo.toml
challenges/c01/: Cargo.toml
challenges/c02/: Cargo.toml
challenges/c03/: Cargo.toml
challenges/c04/: Cargo.toml
challenges/c04/src/: main.rs
challenges/c05/: Cargo.toml
challenges/c06/: Cargo.toml
challenges/c07/: Cargo.toml
challenges/c08/: Cargo.toml
challenges/c09/: Cargo.toml
challenges/c1/: Cargo.toml
challenges/c1/src/: main.rs
challenges/c10/: Cargo.toml
challenges/c10/src/: main.rs
challenges/c11/: Cargo.toml
challenges/c11/src/: main.rs
challenges/c12/: Cargo.toml
challenges/c13/: Cargo.toml
challenges/c14/: Cargo.toml
challenges/c15/: Cargo.toml
challenges/c16/: Cargo.toml
challenges/c17/: Cargo.toml
challenges/c18/: Cargo.toml
challenges/c19/: Cargo.toml
challenges/c2/: Cargo.toml
challenges/c20/: Cargo.toml
challenges/c21/: Cargo.toml
challenges/c22/: Cargo.toml
challenges/c23/: Cargo.toml
challenges/c24/: Cargo.toml
challenges/c25/: Cargo.toml
challenges/c26/: Cargo.toml
challenges/c27/: Cargo.toml
challenges/c3/: Cargo.toml
challenges/c4/: Cargo.toml
challenges/c5/: Cargo.toml
challenges/c6/: Cargo.toml
challenges/c7/: Cargo.toml
challenges/c8/: Cargo.toml
challenges/c9/: Cargo.toml
(+18 files in other folders)
