[workspace]
members = [
  "challenges/c01", "challenges/c02", "challenges/c03", "challenges/c04", "challenges/c05", "challenges/c06", "challenges/c07", "challenges/c08", "challenges/c09", "challenges/c10", "challenges/c11", "challenges/c12", "challenges/c13", "challenges/c14", "challenges/c15", "challenges/c16", "challenges/c17", "challenges/c18", "challenges/c19", "challenges/c20", "challenges/c21", "challenges/c22", "challenges/c23", "challenges/c24", "challenges/c25", "challenges/c26", "challenges/c27"
]
resolver = "2"
